# isa-test-utils

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  compile_flags.txt  vcpkg.json
cmake/: embed_bundle.cmake  env.sh.in  isa-test-utils-config.cmake.in
include/: isa-test-utils.h
include/isa-test-utils/: embed_runtime.h  run.h  setup.h
ports/instrument-data/: portfile.cmake  vcpkg.json
ports/instrument-script-server/: portfile.cmake  vcpkg.json
src/: env.c  path.c  prepare_directories.c  run.c  setup.c
src/internal/: exec.h  measurement-helpers.h  path.h  prepare_directories.h
tests/: CMakeLists.txt  mock-server.sh  mock-template-expander.sh  test_run.c  test_setup.c
